--- a/awesome_project/awesome_app/templates/awesome_app/trade.html
+++ b/awesome_project/awesome_app/templates/awesome_app/trade.html
@@ -1,5 +1,6 @@
-{% load custom_filter%}
-{% load static %}{% load humanize %}
+{% comment %} {% load custom_filter%} {% endcomment %}
+{% load static %}
+{% comment %} {% load humanize %} {% endcomment %}
 <!DOCTYPE html>
 <html>
 
@@ -13,9 +14,9 @@
   </head>
 
   <body>
-    {% include 'dangun_app/nav.html' %}
+    {% include 'awesome_app/nav.html' %}
     <div class="content-box">
-      <a href="{% url 'dangun_app:write' %}">
+      <a href="{% url 'write' %}">
         <div class="floating-button">
           거래글쓰기
         </div>
@@ -42,7 +43,7 @@
           {% for post in posts %}
 
             <div class="card-box">
-              <a href="{% url 'dangun_app:trade_post' post.pk %}" class="trade-text-link">
+              <a href="{% url 'trade_post' post.pk %}" class="trade-text-link">
                 <div class="card-img">
                   {% if post.images %}
                     <img src="{{ post.images.url }}" alt="{{ post.title }}">
@@ -50,7 +51,10 @@
                 </div>
                 <div class="card-info-box">
                   <h5>{{ post.title }}</h5>
-                  <p class="bold">{{ post.price |intcomma}}원</p>
+                  <p class="bold">
+                    {% comment %} {{ post.price |intcomma}} {% endcomment %}
+                    15000원
+                  </p>
                   <p>{{ post.location }}</p>
                   <div class="flex-box">
                     <p>조회
@@ -68,7 +72,7 @@
       </div>
     </div>
   </div>
-  {% include 'dangun_app/footer.html' %}
+  {% include 'awesome_app/footer.html' %}
 
 </body>
 
