--- a/awesome_project/awesome_app/templates/awesome_app/nav.html
+++ b/awesome_project/awesome_app/templates/awesome_app/nav.html
@@ -5,7 +5,7 @@
     <div class="full-box flex-box between">
       <div class="flex-box">
         <div class="logo">
-          <a href="{% url 'dangun_app:main' %}">
+          <a href="{% url 'awesome_app:main' %}">
             <img src="{% static 'img/logo.png' %}" alt=""/>
           </a>
         </div>
@@ -22,15 +22,15 @@
         </div>
       </div>
       <div class="flex-box gap8">
-        <form method="GET" action="{% url 'dangun_app:search' %}">
+        <form method="GET" action="{% url 'awesome_app:search' %}">
           <input type="text" id="search" name="search" class="search" placeholder="물품이나 동네를 검색해보세요"/>
         </form>
         {% if user.is_authenticated %}
-          <a href="{% url 'dangun_app:chat' %}" class="ghost-button orange">채팅하기</a>
-          <a href="{% url 'dangun_app:logout' %}" class="ghost-button">로그아웃</a>
+          <a href="{% url 'awesome_app:chat' %}" class="ghost-button orange">채팅하기</a>
+          <a href="{% url 'awesome_app:logout' %}" class="ghost-button">로그아웃</a>
 
         {% else %}
-          <a href="{% url 'dangun_app:login' %}" class="ghost-button" style="color: #1e1e1e">로그인</a>
+          <a href="{% url 'awesome_app:login' %}" class="ghost-button" style="color: #1e1e1e">로그인</a>
         {% endif %}
       </div>
     </div>
