--- a/awesome_project/awesome_app/templates/awesome_app/trade.html
+++ b/awesome_project/awesome_app/templates/awesome_app/trade.html
@@ -16,7 +16,7 @@
   <body>
     {% include 'awesome_app/nav.html' %}
     <div class="content-box">
-      <a href="{% url 'write' %}">
+      <a href="{% url 'awesome_app:write' %}">
         <div class="floating-button">
           거래글쓰기
         </div>
@@ -43,7 +43,7 @@
           {% for post in posts %}
 
             <div class="card-box">
-              <a href="{% url 'trade_post' post.pk %}" class="trade-text-link">
+              <a href="{% url 'awesome_app:trade_post' post.pk %}" class="trade-text-link">
                 <div class="card-img">
                   {% if post.images %}
                     <img src="{{ post.images.url }}" alt="{{ post.title }}">
