feat: search 기능 추가, 버튼 링크 추가

--- a/awesome_project/awesome_app/templates/awesome_app/footer.html
+++ b/awesome_project/awesome_app/templates/awesome_app/footer.html
@@ -7,8 +7,8 @@
     <div>
       <p class="bold" style="margin-bottom:8px">당근 앱 다운로드</p>
       <div class="download-center">
-        <button>App Store</button>
-        <button>Google Play</button>
+        <button onclick="location.href='https://apps.apple.com/kr/app/%EB%8B%B9%EA%B7%BC/id1018769995'">App Store</button>
+        <button onclick="location.href='https://play.google.com/store/apps/details?id=com.towneers.www&hl=ko-KR'">Google Play</button>
       </div>
     </div>
   </div>
