--- a/awesome_project/awesome_app/templates/awesome_app/main.html
+++ b/awesome_project/awesome_app/templates/awesome_app/main.html
@@ -20,9 +20,9 @@
           <h1>당신 근처의<br>지역 생활 커뮤니티</h1>
           <h4>동네라서 가능한 모든것<br>당근에서 가까운 이웃과 함께해요.</h4>
           <div class="flex-box gap16">
-            <button class="flex-box gap8">
+            <button class="flex-box gap8" onclick="location.href='https://play.google.com/store/apps/details?id=com.towneers.www&hl=ko-KR'">
               <img src="{% static 'img/icon_googleplay.png' %}" alt=""/>Google Play</button>
-            <button class="flex-box gap8">
+            <button class="flex-box gap8" onclick="location.href='https://apps.apple.com/kr/app/%EB%8B%B9%EA%B7%BC/id1018769995'">
               <img src="{% static 'img/icon_appstore.png' %}" alt=""/>App Store</button>
           </div>
         </div>
