--- a/awesome_project/awesome_app/templates/awesome_app/main.html
+++ b/awesome_project/awesome_app/templates/awesome_app/main.html
@@ -17,8 +17,8 @@
     <div class="content-box section1">
       <div class="container between flex-box">
         <div class="main-box flex-box column">
-          <h1>당신 근처의<br>지역 생활 커뮤니티</h1>
-          <h4>동네라서 가능한 모든것<br>당근에서 가까운 이웃과 함께해요.</h4>
+          <h1>동무 근처의<br>지역 생활 연대</h1>
+          <h4>동네라서 할 수 있는 모든 것<br>당근에서 가까운 동무와 함께 하라우.</h4>
           <div class="flex-box gap16">
             <button class="flex-box gap8" onclick="location.href='https://play.google.com/store/apps/details?id=com.towneers.www&hl=ko-KR'">
               <img src="{% static 'img/icon_googleplay.png' %}" alt=""/>Google Play</button>
@@ -33,8 +33,8 @@
       <div class="container flex-box">
         <img src="{% static 'img/landing1.png' %}" alt=""/>
         <div class="description-box">
-          <h1>우리 동네<br>중고 직거래 마켓</h1>
-          <p>동네 주민들과 가깝고 따뜻한 거래를 지금 경험해보세요</p>
+          <h1>우리 동네<br>중고 직거래 장터</h1>
+          <p>동네 주민들과 가깝고 따뜻한 거래를 지금 경험하라우</p>
           <a href="{% url 'awesome_app:trade' %}">
             <button class="button-gray">인기매물 보기</button>
           </a>
@@ -44,7 +44,7 @@
     <div class="content-box section3">
       <div class="container flex-box">
         <div class="section3-text flex-box column gap16 baseline">
-          <h1>이웃과 함께 하는<br>동네생활</h1>
+          <h1>동무와 함께 하는<br>동네생활</h1>
           <p>우리 동네의 다양한 이야기를 이웃과 함께 나누어요.</p>
           <div class="flex-box between" style="gap:44px">
             <div class="flex-box column gap8 baseline">
