feat: add local_life

--- a/awesome_project/awesome_app/templates/awesome_app/nav.html
+++ b/awesome_project/awesome_app/templates/awesome_app/nav.html
@@ -17,6 +17,9 @@
             <a href="/location">
               <button id="location-button">동네인증</button>
             </a>
+            <a href="/local_life">
+              <button id="location-button">동무염탐</button>
+            </a>
           {% endif %}
 
         </div>
