--- a/awesome_project/awesome_app/templates/awesome_app/chat.html
+++ b/awesome_project/awesome_app/templates/awesome_app/chat.html
@@ -8,9 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/global.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/test.css' %}"/>
+    {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/test.css' %}"/> {% endcomment %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/nav.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/footer.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/chat.css' %}"/>
     <title>채팅하기</title>
   </head>
 
@@ -26,7 +27,7 @@
 
               <!-- 아이디및 체크박스 -->
               <div class="id-box flex-box between">
-                아이디
+                <span id="username">{{ username }}</span>
                 <div>
                   <label>
                     안읽은 메세지만 보기
@@ -49,7 +50,9 @@
                 </div>
               </div>
               <!-- 채팅방리스트 -->
+              {% comment %} <a href="{% url 'room' username=user.username %}"> {% endcomment %}
               <div class="flex-box chat-box between">
+                
                 <div>
                   <div class="flex-box">
                     <p class="bold">상대방아이디</p>
@@ -61,19 +64,21 @@
                 <div class="thumbnail-box">
                   <img src="" alt="">
                 </div>
+                
               </div>
+            {% comment %} </a> {% endcomment %}
             </div>
           </div>
-
+          
           <!-- 채팅창-->
           <div class="chat-main-container">
-            <div>
-              <div class="contact-info flex-box">
-                상대방아이디
-                <div class="temp">
-                  36.9도
+              <div style="heigt:500px">
+                <div class="contact-info flex-box">
+                  상대방아이디
+                  <div class="temp">
+                      36.9도
+                  </div>
                 </div>
-              </div>
 
               <!--물품정보-->
               <div class="goods-box flex-box between">
@@ -90,23 +95,17 @@
               </div>
 
               <!--채팅창 메인-->
-              <div class="chat-container">
-                <div class="message-box from-you">
+              <div class="chat-container" id="chat-log">
+                {% comment %} <div class="message-box from-you">
                   <div class="message-text">입금확인했습니다~</div>
                   <p class="s-text">오전 8:20</p>
-                </div>
-                <div class="message-box from-me">
-                  <p class="s-text">오전 8:20</p>
-                  <div class="message-text">네 좋은물건 감사합니다~</div>
-                </div>
+                </div> {% endcomment %}
               </div>
             </div>
 
-            <form class="chat-input" action="submit">
-              <textarea name="" id="" cols="30" rows="10" placeholder="메세지를 입력해주세요"></textarea>
-              <div>
-                <button>전송</button>
-              </div>
+            <form class="chat-input" id="chat-form">
+              <textarea type="text" id="chat-message-input" name="message" cols="30" rows="10" placeholder="메세지를 입력해주세요"></textarea>
+              <div><button id="chat-message-submit" type="button">전송</button></div>
             </form>
           </div>
         </div>
@@ -115,5 +114,70 @@
     {% include 'awesome_app/footer.html' %}
 
   </body>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const chatLog = document.querySelector('#chat-log');
+    const messageInputDom = document.querySelector('#chat-message-input');
+    const chatMessageSubmitBtn = document.querySelector('#chat-message-submit');
+    const username = document.getElementById('username').textContent.trim(); // 유저명을 가져오세요.
+    /* const chatSocket = new WebSocket(
+            'ws://'
+            + window.location.host
+            + '/ws/chat/'
+            + username
+            + '/'
+            + room_name
+            + '/'
+        ); */
+    const now = new Date();
+    const hours = now.getHours().toString().padStart(2, '0');
+    const minutes = now.getMinutes().toString().padStart(2, '0');
+    const currentTime = `${hours}:${minutes}`;
 
+    chatMessageSubmitBtn.addEventListener('click', function() {
+        const message = messageInputDom.value;
+        if (message.trim() !== '') { // 빈 메시지는 추가하지 않음
+            addMessageToChatLog(message);
+            messageInputDom.value = '';
+            scrollToBottom();// 메시지를 추가한 후에 스크롤을 아래로 이동
+        };
+
+
+        chatMessageSubmitBtn.addEventListener('click', function() {
+          const message = messageInputDom.value;
+          if (message.trim() !== '') {
+              chatSocket.send(JSON.stringify({
+                  'message': message,
+                  'username': username // 메시지와 유저명을 전송합니다.
+              }));
+              messageInputDom.value = '';
+          }
+    })
+  });
+
+    document.querySelector('#chat-message-input').addEventListener('keydown', function(e) {
+      if (e.keyCode === 13) {  // enter, return
+          e.preventDefault(); // 폼 제출을 막음
+          document.querySelector('#chat-message-submit').click();
+          
+      }
+  });
+    function addMessageToChatLog(message) {
+        const messageContainer = document.createElement('div');
+        messageContainer.className = 'message-box from-me';
+        messageContainer.innerHTML = `
+        
+            <p class="s-text">${currentTime}</p>
+            <div class="message-text">${message}</div>
+        
+        `;
+        chatLog.appendChild(messageContainer);
+        
+    }
+    function scrollToBottom() {
+      chatLog.scrollTop = chatLog.scrollHeight;
+    }
+  
+});
+</script>
 </html>
