--- a/awesome_project/awesome_app/templates/awesome_app/nav.html
+++ b/awesome_project/awesome_app/templates/awesome_app/nav.html
@@ -29,7 +29,7 @@
           <input type="text" id="search" name="search" class="search" placeholder="물품이나 동네를 검색해보세요"/>
         </form>
         {% if user.is_authenticated %}
-        <a href="{% url 'awesome_app:chat' username=user.username room_name=user.id %}" class="ghost-button orange">채팅하기</a>
+        <a href="{% url 'awesome_app:chat' username=user.username room_number=user.id %}" class="ghost-button orange">채팅하기</a>
           <a href="{% url 'awesome_app:logout' %}" class="ghost-button">로그아웃</a>
 
         {% else %}
