--- a/awesome_project/awesome_app/templates/registration/login.html
+++ b/awesome_project/awesome_app/templates/registration/login.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/nav.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/footer.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}"/>
-    <title>Document</title>
+    <title>로그인</title>
   </head>
 
   <body class="back-ye">
@@ -21,7 +21,16 @@
         <div class="login-container">
           <form method="post" class="login-form">
             {% csrf_token %}
-            {{ form.as_p }}
+            {% for field in form %}
+            <div class ="form-group">
+                <label for = "{{ field.id_for_label }}">{{field.label}}</label>
+                <input type = "{{ field.field.widget.input_type }}" class ="login-input" id ="{{field.id_for_label}}" 
+                placeholder = "{{field.label}}" name = "{{field.name}}">
+            </div>
+            {% if field.errors %}
+            <span style = "color:red">{{field.errors}}</span>
+            {% endif %}
+            {% endfor %}
             <button type="submit" class="login-button">로그인</button>
           </form>
           <p class="register-reco">
@@ -32,5 +41,6 @@
       {% endblock %}
     </div>
   </body>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </html>
