--- a/awesome_project/awesome_app/static/css/chat.css
+++ b/awesome_project/awesome_app/static/css/chat.css
@@ -270,3 +270,18 @@ hr{
 a{
     text-decoration-line:none;
 }
+
+.awesome_logo {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background: none;
+}
+
+.awesome_logo > img {
+    background: none;
+    max-width: 100%; 
+    max-height: 100%; 
+    height: 100%;
+    opacity: 0.5;
+}
