--- a/awesome_project/awesome_app/templates/awesome_app/chat.html
+++ b/awesome_project/awesome_app/templates/awesome_app/chat.html
@@ -122,8 +122,8 @@
             </form>
 
             {% else %}
-            <div class="awesome_logo" style="background: none;">
-              <img src="{% static 'img/awesome_logo.png' %}"  style="background:none; max-width: 100%; height: auto;">
+            <div class="awesome_logo">
+              <img src="{% static 'img/awesome_logo.png' %}">
             </div>
             {% endif %}
           </div>
